--- a/bot/.env.example
+++ b/bot/.env.example
@@ -3,7 +3,7 @@ ACCESS_TOKEN=YOUR_ACCESS_TOKEN
 # Phonenumber to register whatsapp account with
 USER_PHONE_ID=YOUR_USER_PHONE_ID
 # Reverse proxy url (see https://github.com/transitive-bullshit/chatgpt-api#readme)
-REVERSE_PROXY_URL=YOUR_REVERSE_PROXY_URL
+API_URL=YOUR_API_URL
 # (JSON) File path where you'll store your access keys
 ACCESS_KEYS_PATH=/.accessKeys/accessKeyMap.json
 # (JSON) File path where you'll store your context maps
