--- a/bot/package.json
+++ b/bot/package.json
@@ -15,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.2.0",
+    "chatgpt": "^5.2.2",
     "qrcode-terminal": "^0.12.0",
     "queue": "^7.0.0",
+    "uuid": "^9.0.0",
     "whatsapp-web.js": "^1.19.5"
   },
   "type": "module",
