✨ Adds audio and stuff

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -14,3 +14,7 @@ CONVERSATIONS_PATH=/.conversations/conversationsMap.json
 PROMPTS_PATH=/.prompts/promptMap.json
 # (JSON) File path where you'll store your whitelist
 WHITELIST_PATH=/.whitelist/whitelistMap.json
+# (JSON) File path where you'll store loop enabled converations
+LOOP_PATH=/.loop/loopMap.json
+# (JSON) File path where you'll store audio enabled converations
+ENABLED_AUDIO_PATH=/.enabledAudio/enabledAudioMap.json
