--- a/bot/package.json
+++ b/bot/package.json
@@ -14,10 +14,7 @@
   "author": "Bryan Overduin",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/text-to-speech": "^4.2.2",
-    "bull": "^4.10.4",
     "chalk": "^5.2.0",
-    "chatgpt": "^5.2.2",
     "node-gtts": "^2.0.2",
     "qrcode-terminal": "^0.12.0",
     "queue": "^7.0.0",
@@ -26,8 +23,6 @@
   },
   "type": "module",
   "devDependencies": {
-    "@types/bull": "^4.10.0",
-    "dotenv": "^16.0.3",
-    "typescript": "^5.0.4"
+    "dotenv": "^16.0.3"
   }
 }
