✨ Add support for video generation using runwayml

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -18,3 +18,7 @@ WHITELIST_PATH=/.whitelist/whitelistMap.json
 LOOP_PATH=/.loop/loopMap.json
 # (JSON) File path where you'll store audio enabled converations
 ENABLED_AUDIO_PATH=/.enabledAudio/enabledAudioMap.json
+# (JSON) File path where you'll store runawayml api keys (video generation: runwayml.com)
+RUNAWAY_API_KEYS_PATH=/.videoTokens/videoTokenMap.json
+# Chrome directory (Required if wanting to send video's)
+CHROME_DIR=YOUR_CHROME_DIR
