--- a/bot/package.json
+++ b/bot/package.json
@@ -15,11 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.2.0",
+    "mic": "^2.1.2",
     "node-gtts": "^2.0.2",
     "qrcode-terminal": "^0.12.0",
     "queue": "^7.0.0",
     "uuid": "^9.0.0",
-    "whatsapp-web.js": "^1.20.0"
+    "whatsapp-web.js": "^1.23.0"
   },
   "type": "module",
   "devDependencies": {
