--- a/proxy/package.json
+++ b/proxy/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "local": "node index.js"
+    "local": "tsx index.ts"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "puppeteer": "^19.8.5",
@@ -18,7 +19,11 @@
   "author": "Bryan Overduin",
   "license": "ISC",
   "devDependencies": {
-    "dotenv": "^16.0.3"
+    "@types/express": "^4.17.21",
+    "@types/puppeteer": "^7.0.4",
+    "dotenv": "^16.0.3",
+    "tsx": "^4.10.5",
+    "typescript": "^5.4.5"
   },
   "type": "module"
 }
