✨ Adds sentinel token generator ✨ Inject browser scripts 🎨 Typescript everything

--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,5 +1,3 @@
-# Access token from https://chat.openai.com/api/auth/session
-ACCESS_TOKEN=YOUR_ACCESS_TOKEN
 # Phonenumber to register whatsapp account with
 USER_PHONE_ID=YOUR_USER_PHONE_ID
 # Reverse proxy url (see https://github.com/transitive-bullshit/chatgpt-api#readme)
@@ -22,3 +20,5 @@ ENABLED_AUDIO_PATH=/.enabledAudio/enabledAudioMap.json
 RUNAWAY_API_KEYS_PATH=/.videoTokens/videoTokenMap.json
 # Chrome directory (Required if wanting to send video's)
 CHROME_DIR=YOUR_CHROME_DIR
+# Audio folder
+AUDIO_FOLDER=.audioFiles
