--- a/proxy/package.json
+++ b/proxy/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/puppeteer": "^7.0.4",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
     "dotenv": "^16.0.3",
     "tsx": "^4.10.5",
     "typescript": "^5.4.5"
