--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,8 @@
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "puppeteer": "^19.8.5",
+    "hash-wasm": "^4.11.0",
+    "puppeteer": "^23.3.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "uuid": "^9.0.0"
@@ -19,8 +20,10 @@
   "author": "Bryan Overduin",
   "license": "ISC",
   "devDependencies": {
+    "@types/cloudflare-turnstile": "^0.2.1",
     "@types/express": "^4.17.21",
     "@types/puppeteer": "^7.0.4",
+    "@types/qrcode-terminal": "^0.12.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "dotenv": "^16.0.3",
