--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "local": "tsx watch index.ts"
+    "local": "tsx watch src/index.ts"
   },
   "dependencies": {
     "chalk": "^5.3.0",
@@ -21,6 +21,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cloudflare-turnstile": "^0.2.1",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/puppeteer": "^7.0.4",
     "@types/qrcode-terminal": "^0.12.2",
