--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -23,7 +23,10 @@
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
 		"declaration": false,
-		"importHelpers": true
+		"importHelpers": true,
+		"paths": {
+			"@/*": ["./src/*"]
+		}
 	},
 	"include": [
 		"./**/*.js",
