🩹 Adjust example envs

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,4 +1,6 @@
+# TMP folder for temporary file storage
 TMP_FOLDER=TMP_FOLDER
+# Port server will run on
 PORT=PORT
-CONVERSATION_ID=CONVERSATION_ID
-BASE_URL=https://chatgpt.com
+# VPN Extension path (e.g.: Nordvpn for Sora usage if outside of US)
+VPN_EXTENSION_PATH=VPN_EXTENSION_PATH
