--- a/bot/.env.example
+++ b/bot/.env.example
@@ -1,6 +1,16 @@
+# Backend URL
+API_URL=API_URL
 # Phonenumber to register whatsapp account with
-USER_PHONE_ID=YOUR_USER_PHONE_ID
-# Reverse proxy url (see https://github.com/transitive-bullshit/chatgpt-api#readme)
-API_URL=YOUR_API_URL
-# Chrome directory (Required if wanting to send video's)
-CHROME_DIR=YOUR_CHROME_DIR
+USER_PHONE_ID=USER_PHONE_ID
+# Whatsapp ID of the registered whatsapp account
+USER_WHATSAPP_ID=USER_WHATSAPP_ID
+# Chrome directory (Required if wanting to send videos)
+CHROME_DIR=CHROME_DIR
+# Phonenumber of the owner (Optional)
+OWNER_ID=OWNER_ID
+# Will use this prefix for each message
+BOT_PREFIX=BOT_PREFIX
+# Command prefix
+COMMAND_PREFIX=COMMAND_PREFIX
+
+
