--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -22,6 +22,6 @@
         "@/*": ["./src/*"]
       }
   },
-  "include": ["./src/*"],
+  "include": ["./src/**/*.ts"],
   "exclude": ["node_modules"]
 }
