--- a/api/package.json
+++ b/api/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "proxy",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "local": "tsx watch src/index.ts",
-    "prepare": "husky && husky install",
+	"name": "gpt-boy-api",
+	"version": "1.0.0",
+	"description": "ChatGPT Whatsapp api",
+	"main": "src/index.ts",
+	"scripts": {
+		"local": "tsx watch src/index.ts",
+		"prepare": "husky && husky install",
 		"lint": "eslint .",
 		"type-check": "tsc --noEmit"
-  },
-  "dependencies": {
-    "chalk": "^5.3.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "hash-wasm": "^4.11.0",
-    "puppeteer": "^23.3.0",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "uuid": "^9.0.0"
-  },
-  "keywords": [],
-  "author": "Bryan Overduin",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
-    "@types/puppeteer": "^7.0.4",
-    "@types/qrcode-terminal": "^0.12.2",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "dotenv": "^16.0.3",
-    "tsx": "^4.10.5",
-    "typescript": "^5.4.5"
-  },
-  "type": "module"
+	},
+	"dependencies": {
+		"chalk": "^5.3.0",
+		"cors": "^2.8.5",
+		"express": "^4.18.2",
+		"hash-wasm": "^4.11.0",
+		"puppeteer": "^23.3.0",
+		"puppeteer-extra": "^3.3.6",
+		"puppeteer-extra-plugin-stealth": "^2.11.2",
+		"uuid": "^9.0.0"
+	},
+	"keywords": [],
+	"author": "Bryan Overduin",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/cors": "^2.8.19",
+		"@types/express": "^4.17.21",
+		"@types/puppeteer": "^7.0.4",
+		"@types/qrcode-terminal": "^0.12.2",
+		"@types/uuid": "^9.0.8",
+		"@typescript-eslint/eslint-plugin": "^7.9.0",
+		"dotenv": "^16.0.3",
+		"tsx": "^4.10.5",
+		"typescript": "^5.4.5"
+	},
+	"type": "module"
 }
