--- a/bot/package.json
+++ b/bot/package.json
@@ -1,11 +1,10 @@
 {
-	"name": "chatgpt_api",
+	"name": "gpt-boy-bot",
 	"version": "1.0.0",
 	"description": "ChatGPT Whatsapp bot",
-	"main": "index.js",
+	"main": "src/index.ts",
 	"scripts": {
 		"local": "tsx watch src/index.ts",
-		"test": "cross-env NODE_OPTIONS=--openssl-legacy-provider tsx src/data_handlers/sora/getVideo.ts",
 		"prepare": "husky && husky install",
 		"lint": "eslint .",
 		"type-check": "tsc --noEmit"
