--- a/bot/package.json
+++ b/bot/package.json
@@ -5,7 +5,6 @@
 	"main": "src/index.ts",
 	"scripts": {
 		"local": "tsx watch src/index.ts",
-		"prepare": "husky && husky install",
 		"lint": "eslint .",
 		"type-check": "tsc --noEmit"
 	},
@@ -27,7 +26,7 @@
 		"qrcode-terminal": "^0.12.0",
 		"queue": "^7.0.0",
 		"uuid": "^9.0.0",
-		"whatsapp-web.js": "^1.34.2"
+		"whatsapp-web.js": "git://github.com/pedroslopez/whatsapp-web.js#main"
 	},
 	"type": "module",
 	"devDependencies": {
@@ -38,8 +37,7 @@
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.3",
 		"tsx": "^4.11.0",
-		"typescript": "^5.4.5",
-		"husky": "^8.0.0"
+		"typescript": "^5.4.5"
 	},
 	"lint-staged": {
 		"*.{ts,tsx}": [
