--- a/bot/tsconfig.json
+++ b/bot/tsconfig.json
@@ -1,27 +1,11 @@
 {
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "moduleResolution": "bundler",
-    "target": "ES2022",
-    "module": "esnext",
-    "outDir": "dist",
     "rootDir": "src",
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "strict": true,
-    "noImplicitOverride": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "types": ["node"],
-    "sourceMap": true,
-    "useUnknownInCatchVariables": true,
     "paths": {
-        "@/*": ["./src/*"]
-      }
+      "@/*": ["./src/*"]
+    },
   },
-  "include": ["./src/**/*.ts"],
+  "include": ["./src/**/*.ts", "../shared/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
